# rustychatbox

./: .android_ndk_path  AndroidManifest.xml  Cargo.toml  build.rs
src/: deps.rs  main.rs  main_android.rs  osc.rs  ui.rs
src/modules/: activity.rs  component.rs  media.rs  network.rs
src/ui/: chatting.rs  integrations.rs
