[package]
name = "rustychatbox"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = ["glow"] }
image = { version = "0.24", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
chrono = "0.4"
chrono-tz = "0.8"
anyhow = "1.0"
rand = "0.8"
log = "0.4"
fern = "0.6.2"
rust-ini = "0.21"
rosc = "0.11.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
wayland-protocols-wlr = "0.3"
wayland-client = "0.31"
x11-dl = "2.21"
network-interface = "2.0.1"
single-instance = "0.3"
notify-rust = "4.8"
arboard = "3.4.0"
sysinfo = "0.29"
open = "5.3.0"
dirs = "5.0"
dbus = "0.9"
openvr = "0.8.0"
openxr = { git = "https://github.com/galister/openxrs", rev = "af4a55d", features = ["linked"] }

[target.'cfg(target_os = "android")'.dependencies]
dirs = "5.0"
android-activity = { version = "0.5", features = ["native-activity"] }
android_logger = "0.14"
# For clipboard functionality on Android, we might need a different approach
# arboard doesn't work well on Android, so we'll exclude it

[profile.release]
strip = true
opt-level = 3
lto = "thin"
